--- a/MigrationService/Views/Shared/_Layout.cshtml
+++ b/MigrationService/Views/Shared/_Layout.cshtml
@@ -19,23 +19,30 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Management
                             </a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-controller="Migrants" asp-action="Index">Migrants</a></li>
                                 <li><a class="dropdown-item" asp-controller="Applications" asp-action="Index">Applications</a></li>
                                 <li><a class="dropdown-item" asp-controller="Officers" asp-action="Index">Officers</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" asp-controller="Documents" asp-action="Index">Documents</a></li>
                                 <li><a class="dropdown-item" asp-controller="Countries" asp-action="Index">Countries</a></li>
                                 <li><a class="dropdown-item" asp-controller="Languages" asp-action="Index">Languages</a></li>
+                                <li><a class="dropdown-item" asp-controller="Documents" asp-action="Index">Documents</a></li>
                             </ul>
                         </li>
                     </ul>
+                    <form class="d-flex" asp-controller="Search" asp-action="Index" method="get">
+                        <div class="input-group">
+                            <input class="form-control" type="search" name="query" placeholder="Search..." aria-label="Search">
+                            <button class="btn btn-outline-primary" type="submit">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </nav>
